fix for title overlap with sidebar

--- a/styles/_title.scss
+++ b/styles/_title.scss
@@ -5,6 +5,6 @@
   margin-top: 1rem;
 
   @include breakpoint($breakpoint) {
-    font-size: 3rem;
+    font-size: 2.25rem;
   }
 }
